flotaDeVehiculos eliminado y refactorizacion